--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A user-friendly HTML5 Form validator for Bootstrap 3",
   "main": "js/validator.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt build"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,12 @@
     "plugin"
   ],
   "author": "Cina Saffary",
-  "licenses": [{
-    "type": "MIT",
-    "url": "http://opensource.org/licenses/MIT"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/1000hz/bootstrap-validator/issues"
   },
